# sample-app-aoai-chatGPT

./: app.py  config.yaml  prompt_config.yaml  requirements.txt  testing.ipynb
.github/workflows/: sample-app-github-cd.yml  workflow.yaml
backend/: settings.py  utils.py
backend/agent/: agent_langchain.py  config.py  model.py
backend/aisearch/: aisearch.py  model.py
backend/azure_service_client/: azure_ai_search.py
backend/history/: cosmosdbservice.py
backend/metadata/: cosmos_db_service.py  models.py  test_comos_permit_client.py
backend/permit_agent/: agent_langchain.py
permit_agent/: agent_langchain.py  backend.py  pyproject.toml
permit_agent/utils/: config.py  cosmosdb-ingestion.ipynb  evaluation-pipeline.ipynb  kkpr-kkprl-reclassification.ipynb  trace-data.ipynb
