[project]
name = "pdh-permit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "azure-cosmos>=4.14.0",
    "duckdb>=1.4.1",
    "instructor>=1.11.3",
    "langchain-openai>=0.3.34",
    "langchain>=0.3.27",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "ragas>=0.3.6",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "python-dotenv>=1.1.1",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "langgraph>=0.6.8",
    "aiohttp>=3.12.15",
    "ragas>=0.3.6",
    "langfuse>=3.8.1",
    "pypdf2>=3.0.1",
]
